B-77418 Tech Debt: FDA: add ordering for scenarios in metadata ACL reports